# Theoden

./: .eslintrc.cjs  .gitignore  .gitmodules  AGENTS.md  README.md  cliff.toml  eslint.config.mjs  index.html  package-lock.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  progress.md  ralph-loop.ps1  ralph-loop.sh  sync-electron-ui.cjs  tailwind.config.ts  tsconfig.json  vite.config.ts
.github/workflows/: codespell.yml  rust-release.yml  shell-tool-mcp.yml  tauri-parity-gates.yml  theoden-ui.yml
.husky/: pre-commit
codex-rs/: README.md  config.md
codex-rs/.cargo/: config.toml
docs/: APP_SERVER.md  AUTOMATIONS.md  CLOUD.md  COMMIT_PR.md  DATA_MODEL.md  FEATURES.md  IMPLEMENTATION_NOTES.md  INTEGRATIONS.md  PHILOSOPHY.md  README.md  UI_SPEC.md  WORKFLOW_UI.md  WORKTREES.md  skills.md  tauri-v2-migration-plan.md
docs/codex-desktop-architecture-map/: 00-scope-and-methodology.md  01-artifact-inventory.md  02-build-and-packaging.md  03-runtime-topology.md  04-main-process-architecture.md  05-preload-bridge.md  06-renderer-architecture.md  07-worker-architecture.md  08-ipc-and-message-flow.md  09-host-handler-api-overview.md  10-routing-and-navigation.md  11-settings-architecture.md  12-state-and-persistence.md  13-database-and-automations.md  20-end-to-end-flows.md  (+9 more)
scripts/: check-electron-method-coverage.cjs  check-electron-worker-coverage.cjs  check-parity-audit.cjs  check-parity-baseline-lock.cjs  check-parity-bridge-boundary.cjs  check-parity-feature-contract.cjs  check-parity-renderer-mode-matrix.cjs  check-parity-routes-scope.cjs  check-parity-ui-motion.cjs  prepare-desktop-runtime.cjs  run-desktop.cjs  sync-electron-ui.cjs
shell-tool-mcp/: README.md
src/: main.tsx  vite-env.d.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/bridge/: electronBridgeCompat.js
src-tauri/capabilities/: default.json
src-tauri/src/: app_server_bridge.rs  automation_store.rs  cloud_host.rs  electron_compat.rs  electron_method_dispatch.rs  git_worker_compat.rs  main.rs  paths.rs  runtime_contract.rs  state_store.rs  terminal_host.rs
(+264 files in other folders)
