[package]
name = "codex-command-center"
version = "0.1.0"
edition = "2021"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tauri = { version = "~2.9.1", features = [] }
tauri-plugin-decorum = "1.1.1"
tauri-plugin-dialog = "2"
tokio = { version = "1.37", features = ["io-util", "macros", "process", "rt-multi-thread", "sync", "time"] }
which = "8.0.0"
dirs = "6.0.0"
rusqlite = { version = "0.32.1", features = ["bundled"] }
toml = "0.8.19"
uuid = { version = "1.11.0", features = ["v4"] }

[features]
custom-protocol = ["tauri/custom-protocol"]
